--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@framedev/cli",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Frame: coding agent optimized for local LLMs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,13 +15,16 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "scripts/ensure-better-sqlite3.js"
   ],
   "publishConfig": {
     "access": "public"
   },
   "scripts": {
     "build": "node scripts/generate-build-config.js && tsc",
+    "postinstall": "node scripts/ensure-better-sqlite3.js",
+    "predev": "node scripts/ensure-better-sqlite3.js",
     "dev": "tsx src/index.ts",
     "start": "node dist/index.js",
     "test": "vitest",
@@ -41,10 +44,10 @@
     "@homunculus-live/introspection": "*",
     "@homunculus-live/primitives": "*",
     "@homunculus-live/semantic-engine": "*",
-    "better-sqlite3": "^11.8.1",
+    "better-sqlite3": "^12.5.0",
     "chalk": "^5.4.1",
-    "dotenv": "^16.5.0",
-    "glob": "^11.0.1",
+    "dotenv": "^17.2.3",
+    "glob": "^13.0.0",
     "winston": "^3.17.0"
   },
   "engines": {
